# Shielded-Ledger-Hivemind

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  dfx.json  e2e.py  mops.toml
ceremony/: Cargo.toml
ceremony/src/: contribute.rs  lib.rs  params.rs  phase1_import.rs  session.rs  srs.rs  transcript.rs  verify.rs
cert_oracle/: Cargo.toml
cert_oracle/src/: main.rs
circuit/: Cargo.toml
circuit/common/: Cargo.toml
circuit/common/tests/: security_properties.rs  semantic_audit.rs  statement_binding.rs  statement_dims.rs  under_constrained.rs  violation_matrix.rs
circuit/vectors-bls/: SETUP-MANIFEST.json  cm_out1.hex  deposit_vk.hex  fake_anchor.hex  fake_cm_out1.hex  fake_cm_out2.hex  fake_nf1.hex  fake_proof.hex  transfer_proof.hex  withdraw_anchor.hex  withdraw_nf1.hex  withdraw_proof.hex  withdraw_recipient_binding.hex
coordinator/: BUILD-HASH.txt  Dockerfile  build.sh  coordinator.did  coordinator.most  coordinator.wasm  mops.toml  verify-build.sh
coordinator/battery/: Cargo.toml
coordinator/battery/src/: main.rs
coordinator/src/: Main.mo  PokVerify.mo  Wire.mo
coordinator/test/: PokVectorTest.mo
cross_oracle/: Cargo.toml
cross_oracle/src/: lib.rs
demo-frontend/: .gitignore  DemoTokenLedger.mo  README.md  canister_ids.json  dfx.json  index.html  package-lock.json  package.json  tailwind.config.js  verify-ii.mjs  verify-legacy-migration.mjs  verify.mjs  vite.config.js
demo-frontend/contributor-client/: app.js  index.html
demo-frontend/contributor-wasm/: Cargo.toml
demo-frontend/contributor-wasm/src/: lib.rs
demo-frontend/prover-wasm/: Cargo.toml
demo-frontend/prover-wasm/src/: lib.rs
demo-frontend/scripts/: redeploy.sh  test-amounts.mjs  test-keyset-negative.mjs  verify-keyset.mjs  verify-static-boot.mjs
demo-frontend/src/: App.jsx  amounts.js  auth.js  config.js  ic.js  index.css  ledgerFeed.js  prover.js  wallet.js
docs/: CEREMONY.md  ICRC3-ZKNOTE1-SCHEMA.md  PIR-SPEC.md  PIR-V1-LEGACY.md  PIR-V2-SPEC.md  READ-PATH-SPEC.md  RESTORE-BENCHMARKS.md  SOAK-RESULT.md  TRUSTED-SETUP-POLICY.md  VERIFICATION-FORTRESS.md
fixtures/: SHA256SUMS
fixtures/pool-vectors/: ORACLE.txt  anchor.hex  bp_agg16_commits.hex  bp_agg16_proof.hex  bp_agg2_commits.hex  bp_agg2_proof.hex  bp_single_badproof.hex  bp_single_commit.hex  bp_single_proof.hex  cm2.hex  cm_out1.hex  cm_out2.hex  deposit1_cm.hex  deposit1_proof.hex  (+18 more)
fixtures/pool-vectors-bls12-381/: ORACLE.txt  cm_out2.hex  deposit1_cm.hex  motoko-groth16-uncompressed.txt  nf1.hex  transfer_badproof.hex  transfer_vk.hex  withdraw_cm_out2.hex  withdraw_nf2.hex
fixtures/pool-vectors-bls12-381-hardened/: ORACLE.txt  SETUP-MANIFEST.json  anchor.hex  deposit1_proof.hex  deposit2_cm.hex  deposit2_proof.hex  fake_nf2.hex  fake_proof.hex  motoko-groth16-uncompressed.txt  transfer_badproof.hex  transfer_proof.hex  transfer_vk.hex  withdraw_cm_out1.hex  withdraw_proof.hex
fortress/: Cargo.toml
fortress/fuzz/: .gitignore  Cargo.toml  README.md
fortress/fuzz/corpus/ceremony_contribution/: extra0_288  extra1_384  extra2_600  extra3_800  seed2_48  seed3_96  seed4_192  seed5_288  seed6_384  seed7_500  valid_delta
fortress/fuzz/corpus/ceremony_transcript/: framed  seed1_4  seed3_100  seed4_300  valid_framed
fortress/fuzz/corpus/decode_proof/: deposit  transfer
fortress/fuzz/corpus/decode_vk/: deposit  transfer
fortress/fuzz/corpus/icrc3_block/: seed2_4  seed4_64  seed5_256
fortress/fuzz/corpus/public_input_parser/: count1024  count1_one  count2  count3  count8  nearr  over1024
fortress/fuzz/corpus/stable_record/: seed2_8  seed3_64  seed4_256  seed5_1024
fortress/fuzz/fuzz_targets/: ceremony_contribution.rs  ceremony_transcript.rs  decode_fr.rs  decode_g1.rs  decode_g2.rs  decode_proof.rs  decode_vk.rs  decode_vk_raw.rs  icrc3_block.rs  public_input_parser.rs  stable_record.rs  teeth_planted_panic.rs
fortress/harness/: Verifier.mo
fortress/motoko/: ArithDiff.mo  CurveDiff.mo  FuzzDecoders.mo  PairingDiff.mo  Properties.mo  TowerDiff.mo
fortress/refmodel/: model.py
fortress/src/: curvepair.rs  lib.rs  tower.rs
frontier_oracle/: Cargo.toml
frontier_oracle/src/: main.rs
icrc3_oracle/: Cargo.toml
nns_adapter/: Cargo.toml  nns_adapter.did
nns_adapter/pinned/: PIN.md  adapter_ledger_surface.did
nns_adapter/src/: legacy.rs  lib.rs  main.rs
scripts/: build-test-wasm.sh  detect-battery.sh  fortress-arith.sh  fortress-constraints.sh  fortress-fuzz-motoko.sh  fortress-fuzz.sh  fortress-invariant-model.sh  fortress-metamorphic.sh  fortress-properties.sh  fortress-refmodel-teeth.sh  fortress-refmodel.sh  fortress-seam.sh  fortress-sidechannel.sh  fortress-taxonomy.sh  fortress-teeth.sh  fortress.sh  security-gate.sh  test-hooks.frag.mo  verify-current-groth16.mjs
soak/: Cargo.toml  gen-soak-result.py  run-watchdog.sh
soak/src/: bench.rs  candid_types.rs  cert.rs  checkpoint.rs  crypto.rs  detect.rs  fortress_gate.rs  icrc3_hash.rs  keys.rs  lib.rs  linkage.rs  main.rs  mint_guard.rs  model.rs  observer.rs  pic_env.rs  pir2.rs  prover.rs  replayer.rs  runner.rs  scan.rs
src/: CertifiedTuple.mo  DetectChain.mo  ICRC1Block.mo  ICRC2.mo  ICRC2Block.mo  ICRC3.mo  Main.mo  NnsBlock.mo  NoteAudit.mo  NoteCodec.mo  Pir2.mo  PoseidonConstants.mo  PoseidonTree.mo  StableBlobSet.mo  StableLog.mo
tests/: AuditCostProbe.mo  ChurnProfile.mo  DemoDirectory.mo  DetectChainVectors.mo  DetectFrontierCross.mo  DetectFrontierDifferential.mo  DetectStreamByteIdentity.mo  FrontierCostProbe.mo  FrontierVectorsA.mo  FrontierVectorsB.mo  Gate3StableTest.mo  ICRC2BlockTest.mo  ICRC3HashTest.mo  IcpLedgerFixture.mo  MaliciousTreeOracle.mo  NnsArchiveFixture.mo  Pir2CostProbe.mo  Pir2MicroBench.mo  PoseidonDifferential.mo  ReadPathProbe.mo  ScaleFixture.mo  detect-chain-vectors.json  detect-frontier-vectors.json
tree_oracle/: Cargo.toml  tree_oracle.did
tree_oracle/src/: lib.rs
verifier-lab/: Curve.mo  CurveJac.mo  CurveJacTest.mo  Decode.mo  DecodeG2.mo  Fp.mo  FpMont.mo  Groth16MultiTest.mo  Groth16Wire.mo  OracleData.mo  PairingFinalExp.mo  PoolBlsData.mo  PoolWireData.mo  WireTest.mo
(+50 files in other folders)
