[package]
name = "ceremony"
version = "0.1.0"
edition = "2021"
publish = false
description = "Phase-2 trusted-setup MMORPG ceremony core (BGM17) for the shielded-ledger Groth16 circuits, BLS12-381"

# Self-contained workspace. The repo root workspace and the `circuit/` workspace each already
# define a package literally named `common` (`vendor/tree_common` and `circuit/common`); cargo
# cannot place two same-named packages in one lockfile, so this crate roots its own workspace and
# depends on `circuit/common` (the exact circuits the ceremony specializes) by path.
# Build with: cargo build --release --manifest-path ceremony/Cargo.toml
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
# The delta-division and conservation arithmetic must never wrap silently.
overflow-checks = true

[lib]
name = "ceremony"
path = "src/lib.rs"

[[bin]]
name = "ceremony-cli"
path = "src/bin/ceremony_cli.rs"

[[bin]]
name = "verify-transcript"
path = "src/bin/verify_transcript.rs"

[[bin]]
name = "emit-pok-vector"
path = "src/bin/emit_pok_vector.rs"

[dependencies]
# The exact circuits the ceremony specializes, over BLS12-381 (Poseidon, notes, tree, R1CS).
common = { path = "../circuit/common", features = ["bls12-381"] }

ark-bls12-381 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-poly = "0.5"
ark-groth16 = { version = "0.5", default-features = false }
ark-relations = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"

sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
