[package]
name = "nns_adapter"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "nns-adapter-oracle"
path = "src/main.rs"

[dependencies]
candid = "0.10"
crc32fast = "1"
hex = "0.4"
ic-cbor = "=3.2.0"
ic-cdk = "=0.17.2"
ic-certification = "=3.2.0"
leb128 = "0.2"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ic-agent = { version = "=0.48.1", default-features = false }
ic-certificate-verification = "=3.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
