[package]
name = "soak"
version = "0.1.0"
edition = "2021"
publish = false
description = "Randomized model-checked PocketIC soak suite for the shielded ledger"

# Self-contained workspace. The repo root workspace and the `circuit/` workspace each already
# define a package literally named `common` (`vendor/tree_common` and `circuit/common`); cargo
# cannot place two same-named packages in one lockfile, so the soak suite roots its own workspace
# here and depends on `circuit/common` (the exact circuit the pinned keys were generated against)
# by path. Build with: cargo build --release --manifest-path soak/Cargo.toml
[workspace]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
# The reference model's balance arithmetic must never wrap silently: a model bug must abort the
# soak, not masquerade as a huge balance.
overflow-checks = true

[[bin]]
name = "soak"
path = "src/main.rs"

[dependencies]
# The circuit itself, reused verbatim over BLS12-381 (Poseidon, notes, tree, R1CS circuits).
common = { path = "../circuit/common", features = ["bls12-381"] }
ark-groth16 = { version = "0.5", default-features = false }
ark-bls12-381 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"
ark-snark = "0.5"
ark-std = "0.5"
ark-relations = "0.5"

pocket-ic = "=13.0.0"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
num-bigint = "0.4"

# certificate verification for B6 (same crates and versions as cert_oracle/)
ic-certification = "=3.2.0"
ic-certificate-verification = "=3.2.0"
ic-cbor = "=3.2.0"
leb128 = "0.2"
url = "2"
