[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-crypto-primitives = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-groth16 = { workspace = true }
ark-snark = { workspace = true }

[features]
bls12-381 = ["dep:ark-bls12-381"]
