[package]
name = "coordinator-battery"
version = "0.1.0"
edition = "2021"
publish = false
description = "PocketIC integration battery for the Phase-2 ceremony coordinator canister"

[workspace]

[[bin]]
name = "coordinator-battery"
path = "src/main.rs"

[dependencies]
ceremony = { path = "../../ceremony" }
ark-bls12-381 = "0.5"
ark-ec = "0.5"
pocket-ic = "=13.0.0"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"

[profile.release]
opt-level = 2
