[package]
name = "ceremony-contributor-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Menese DeFi Team"]
description = "Browser contributor client for the Phase-2 trusted-setup ceremony: apply-and-destroy in the wasm sandbox"

# Self-contained workspace (the `ceremony` path-dep transitively pulls `circuit/common`, whose
# package name `common` would collide with other in-repo `common` crates in a shared lockfile).
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The tested Phase-2 contribution core. The browser reuses EXACTLY the same transform + PoK the
# standalone verifier and the coordinator check, so there is one implementation of the math.
ceremony = { path = "../../ceremony" }

wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_chacha = "0.3"
# WebCrypto-backed entropy: getrandom's "js" feature routes to crypto.getRandomValues in the browser.
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
ark-bls12-381 = "0.5"
ark-ec = "0.5"

[profile.release]
opt-level = 3
lto = true
