[package]
name = "pool-prover-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Menese DeFi Team"]
description = "Client-side prover for the shielded-pool demo: notes, Merkle paths, Groth16 proofs, PIR client"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../../vendor/tree_common", features = ["bls12-381"] }
ark-bls12-381 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-groth16 = { version = "0.5", default-features = false }
ark-relations = "0.5"
ark-snark = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true

[workspace]
